--- a/src/styles/layout/_main.scss
+++ b/src/styles/layout/_main.scss
@@ -1,3 +1,6 @@
+html {
+  scroll-behavior: smooth;
+}
 .canvas {
   width: 100vw;
   height: 100vh;
@@ -5,33 +8,50 @@
   top: 0;
   left: 0;
   z-index: -1;
-
-  //   background: hsla(141, 54%, 86%, 1);
-
-  //   background: linear-gradient(
-  //     -90deg,
-  //     hsla(141, 54%, 86%, 1) 0%,
-  //     hsla(333, 73%, 85%, 1) 37%,
-  //     hsla(50, 100%, 61%, 1) 100%
-  //   );
-
-  //   background: -moz-linear-gradient(
-  //     -90deg,
-  //     hsla(141, 54%, 86%, 1) 0%,
-  //     hsla(333, 73%, 85%, 1) 37%,
-  //     hsla(50, 100%, 61%, 1) 100%
-  //   );
-
-  //   background: -webkit-linear-gradient(
-  //     -90deg,
-  //     hsla(141, 54%, 86%, 1) 0%,
-  //     hsla(333, 73%, 85%, 1) 37%,
-  //     hsla(50, 100%, 61%, 1) 100%
-  //   );
 }
 .main {
   margin-top: 10vh;
+  position: relative;
+}
+
+.countdown {
   position: absolute;
-  top: 10vh;
-  left: 0;
+  display: flex;
+  color: #fff;
+  left: 50%;
+  bottom: -15%;
+  transform: translate(-50%, 0);
+  background-color: #ff3366ce;
+  padding: 10px 20px 30px 20px;
+  border-radius: 50px;
+
+  @include tablet {
+    bottom: 80%;
+  }
+  @include mobile {
+    bottom: 80%;
+  }
+
+  &__clock {
+    position: relative;
+    margin: 0 15px;
+    font-size: $normal-text;
+
+    @include mobile {
+      font-size: $small-text;
+    }
+
+    span {
+      color: $tertiary-color;
+      position: absolute;
+      bottom: -20px;
+      left: 0px;
+
+      font-size: 10px;
+
+      @include mobile {
+        font-size: 8px;
+      }
+    }
+  }
 }
