--- a/src/styles/utilities/_variables.scss
+++ b/src/styles/utilities/_variables.scss
@@ -3,7 +3,7 @@ $secondary-color: #ff3366;
 $tertiary-color: #131313;
 
 $primary-font: "Oswald", sans-serif;
-$secondary-font: "Poppins";
+$secondary-font: "Lora", serif;
 
 $heading-text: 108px;
 $heading2-text: 72px;
