--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,6 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;1,400;1,500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;600&family=Poppins:ital,wght@0,400;0,500;1,400;1,500&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;1,400;1,500&display=swap");
 html {
   scroll-behavior: smooth;
 }
@@ -12,4 +11,5 @@ body {
   font-size: calc(14px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));
   background: #ffeeee;
   color: $tertiary-color;
+  font-family: $secondary-font;
 }
