--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,5 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;1,400;1,500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;600&family=Poppins:ital,wght@0,400;0,500;1,400;1,500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;1,400;1,500&display=swap");
 html,
 body,
 div,
@@ -143,6 +143,7 @@ body {
   font-size: calc(14px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));
   background: #ffeeee;
   color: #131313;
+  font-family: "Lora", serif;
 }
 
 /*! locomotive-scroll v4.1.3 | MIT License | https://github.com/locomotivemtl/locomotive-scroll */
@@ -335,7 +336,7 @@ html.has-scroll-dragging {
 .header__nav {
   color: #131313;
   text-transform: uppercase;
-  font-family: "Poppins";
+  font-family: "Lora", serif;
   font-weight: 500;
   text-decoration: none;
   padding: 5px 10px;
@@ -692,6 +693,14 @@ html {
           flex-direction: column;
 }
 
+@media screen and (max-width: 900px) {
+  .about {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
 .about__heading {
   font-size: 54px;
   font-family: "Oswald", sans-serif;
@@ -717,20 +726,80 @@ html {
   }
 }
 
-.about__content {
-  width: 95%;
-  margin: 0 auto;
-  height: 80%;
+@media screen and (max-width: 650px) {
+  .about__heading {
+    font-size: 36px;
+  }
+}
+
+.about__card {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  font-family: "Lora", serif;
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100vw;
+  margin: 2rem 3rem;
 }
 
-.about__content__card {
+@media screen and (max-width: 900px) {
+  .about__card {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .about__card__second {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+}
+
+.about__card__image {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 2rem;
+}
+
+.about__card__image__second {
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.about__card__image img {
+  width: 400px;
+}
+
+@media screen and (max-width: 650px) {
+  .about__card__image img {
+    width: 250px;
+  }
+}
+
+.about__card__content {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -738,61 +807,51 @@ html {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  background: rgba(255, 255, 255, 0.15);
-  -webkit-box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-          box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-  backdrop-filter: blur(7.5px);
-  -webkit-backdrop-filter: blur(7.5px);
-  width: 350px;
-  margin: 15px;
-  padding: 2rem 10px;
-  min-width: 220px;
-  border-right: 4px solid #ff3366;
-}
-
-@media screen and (max-width: 650px) {
-  .about__content__card {
-    padding: 2rem 20px;
-  }
-  .about__content__card:last-child() {
-    margin-bottom: 4rem;
-  }
-}
-
-.about__content__card h1 {
-  font-size: 36px;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-  text-transform: uppercase;
-  border-bottom: 2px solid #ff3366;
-  font-weight: 600;
-  font-family: "Oswald", sans-serif;
-}
-
-@media screen and (max-width: 650px) {
-  .about__content__card h1 {
-    font-size: 28px;
-  }
-}
-
-.about__content__card p {
-  font-size: 16px;
-  margin-top: 2rem;
-  letter-spacing: 1px;
-  line-height: 1.2rem;
-  width: 100%;
-  font-size: 14px;
-  text-align: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 50%;
 }
 
 @media screen and (max-width: 900px) {
-  .about__content__card p {
-    font-size: 14px;
-    line-height: 1.1rem;
+  .about__card__content {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin: 2rem;
+    width: 80%;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .about__card__content {
+    width: 100%;
+  }
+}
+
+.about__card__content h1 {
+  font-size: 36px;
+  font-weight: 600;
+  font-family: "Oswald", sans-serif;
+  margin-bottom: 2rem;
+}
+
+.about__card__content p {
+  font-size: 16px;
+  font-weight: 400;
+  width: 60%;
+}
+
+.about__card__content__second {
+  padding-left: 10rem;
+}
+
+@media screen and (max-width: 900px) {
+  .about__card__content__second {
+    padding-left: 0;
   }
 }
 
@@ -803,43 +862,19 @@ html {
   display: flex;
   height: 40vh;
   padding-top: 10vh;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 @media screen and (max-width: 650px) {
   .contact {
     height: 50vh;
-  }
-}
-
-.contact__code, .contact__copy {
-  position: absolute;
-  bottom: 10%;
-  font-size: 20px;
-  text-decoration: none;
-  color: #131313;
-  text-decoration: underline;
-  left: 10%;
-  -webkit-transform: translate(-50%, 0);
-          transform: translate(-50%, 0);
-}
-
-@media screen and (max-width: 650px) {
-  .contact__code, .contact__copy {
-    -webkit-transform: translate(-20%, 0);
-            transform: translate(-20%, 0);
-  }
-}
-
-.contact__copy {
-  text-decoration: none;
-  left: 90%;
-  bottom: -4%;
-}
-
-@media screen and (max-width: 650px) {
-  .contact__copy {
-    -webkit-transform: translate(-50%, 0);
-            transform: translate(-50%, 0);
   }
 }
 
@@ -883,8 +918,15 @@ html {
   }
 }
 
-.contact__message span {
+.contact__message__links {
   width: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   color: #ff3366;
   font-size: 54px;
   font-weight: 500;
@@ -893,10 +935,43 @@ html {
 }
 
 @media screen and (max-width: 900px) {
-  .contact__message span {
+  .contact__message__links {
     width: 90%;
     font-size: 36px;
   }
+}
+
+.contact__message__links .social__links {
+  width: 50%;
+  margin: 2rem auto 1rem auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  font-size: 36px;
+}
+
+.contact__message__links .social__links a {
+  text-decoration: none;
+  color: #131313;
+}
+
+.contact__bottom {
+  margin: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 90%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 2rem;
+}
+
+.contact__bottom a {
+  text-decoration: none;
+  color: #131313;
 }
 
 .team {
@@ -1081,6 +1156,8 @@ html {
 .themes__image {
   width: 400px;
   margin: 2rem;
+  border: 1px solid #606060;
+  border-radius: 20px;
 }
 
 @media screen and (max-width: 650px) {
