--- a/src/styles/pages/_about.scss
+++ b/src/styles/pages/_about.scss
@@ -9,9 +9,10 @@
   }
 
   &__heading {
-    @include subHeading();
+    @include heading();
     margin: 2rem 4rem;
-
+    text-transform: capitalize;
+    border: 0;
     @include mobile {
       font-size: $heading4-text;
     }
@@ -45,7 +46,7 @@
       }
 
       img {
-        width: 400px;
+        width: 450px;
         @include mobile {
           width: 250px;
         }
@@ -74,9 +75,12 @@
         margin-bottom: 2rem;
       }
       p {
-        font-size: $body-text;
+        font-size: 18px;
         font-weight: 400;
-        width: 60%;
+        width: 40ch;
+        @include mobile {
+          width: 25ch;
+        }
       }
 
       &__second {
