--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -10,7 +10,7 @@
   position: fixed;
   top: 0;
   left: 5vw;
-
+  background-color: #fff;
   @include mobile {
     width: 100vw;
   }
@@ -62,15 +62,18 @@
   &__nav {
     color: $tertiary-color;
     text-transform: uppercase;
-    font-family: $secondary-font;
+    font-family: $primary-font;
     font-weight: 500;
     text-decoration: none;
     padding: 5px 10px;
-    letter-spacing: 0.09rem;
+    // letter-spacing: 0.09rem;
     cursor: pointer;
 
     &:last-child {
-      border: 3px solid $secondary-color;
+      background: $secondary-color;
+      color: white;
+      border-radius: 10px;
+      padding: 0.5rem 1rem;
     }
   }
 }
