--- a/src/styles/pages/_sponsors.scss
+++ b/src/styles/pages/_sponsors.scss
@@ -23,21 +23,37 @@
   }
 
   &__image {
-    width: 150px;
-    margin: 2rem;
+    width: 200px;
+    margin: 1rem 2rem;
+    @include mobile {
+      width: 150px;
+    }
   }
   &__main_parent {
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 2rem;
   }
 
   &__main {
     width: 300px;
 
     @include mobile {
-      width: 250px;
+      width: 220px;
+    }
+  }
+
+  &__row {
+    margin-bottom: 3rem;
+    width: 90%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    @include mobile {
+      margin-bottom: 2rem;
     }
   }
 }
