--- a/src/styles/pages/_timeline.scss
+++ b/src/styles/pages/_timeline.scss
@@ -1,11 +1,12 @@
 .contact {
   width: 100vw;
   display: flex;
-  height: 40vh;
-  padding-top: 10vh;
-  display: flex;
+  height: auto;
+  padding-top: 1rem;
+  font-family: $primary-font;
   flex-direction: column;
   justify-content: space-between;
+  background-color: $secondary-color;
 
   @include mobile {
     height: 50vh;
@@ -17,7 +18,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
     font-size: $normal-text;
+
     @include tablet {
       width: 80%;
       font-size: 20px;
@@ -25,10 +28,9 @@
     }
     p {
       width: 50%;
-      letter-spacing: 0.8px;
-      line-height: 1.8rem;
-      margin-bottom: 2rem;
+      margin-bottom: 1rem;
       text-align: center;
+      font-weight: 700;
 
       @include tablet {
         width: 90%;
@@ -38,10 +40,9 @@
       width: 50%;
       display: flex;
       flex-direction: column;
-      color: $secondary-color;
+      color: #fff;
       font-size: $heading3-text;
       font-weight: 500;
-      text-decoration: underline;
       text-align: center;
 
       @include tablet {
@@ -56,9 +57,11 @@
         display: flex;
         justify-content: space-around;
         font-size: $heading4-text;
+
         a {
           text-decoration: none;
           color: $tertiary-color;
+          margin: 5px;
         }
       }
     }
@@ -69,7 +72,9 @@
     display: flex;
     width: 90%;
     justify-content: space-between;
-    margin-bottom: 2rem;
+    margin-bottom: 0rem;
+    font-family: $secondary-font;
+
     a {
       text-decoration: none;
       color: $tertiary-color;
