--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -380,7 +380,7 @@ html {
   display: flex;
   color: #fff;
   left: 50%;
-  bottom: -15%;
+  bottom: 5%;
   -webkit-transform: translate(-50%, 0);
           transform: translate(-50%, 0);
   background-color: #ff3366ce;
@@ -431,7 +431,7 @@ html {
   display: -ms-flexbox;
   display: flex;
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   margin-top: 10vh;
 }
 
@@ -447,7 +447,7 @@ html {
 
 .home__content {
   width: 45%;
-  height: 80%;
+  height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -459,6 +459,8 @@ html {
       -ms-flex-pack: center;
           justify-content: center;
   padding: 0rem 4rem;
+  padding-top: 3rem;
+  position: relative;
   font-size: 16px;
   color: #232323;
 }
@@ -466,7 +468,7 @@ html {
 @media screen and (max-width: 900px) {
   .home__content {
     width: 90%;
-    padding: 0 2rem;
+    padding: 4rem 2rem;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
@@ -524,12 +526,32 @@ html {
   }
 }
 
+.home__content__buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
 .home__content__button {
   background-color: #ff2768;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-  padding: 1rem 2rem;
+  width: 312px;
+  height: 44px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   font-size: 28px;
   font-family: "Oswald", sans-serif;
   text-transform: uppercase;
@@ -537,12 +559,23 @@ html {
   color: white;
   font-weight: 500;
   cursor: pointer;
-  border-radius: 10px;
+  margin: 1rem 0rem;
+  border-radius: 5px;
 }
 
 .home__content__button a {
   text-decoration: none;
   color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.home__content__button a span {
+  margin: 0 1rem;
 }
 
 @media screen and (max-width: 900px) {
@@ -563,6 +596,7 @@ html {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  margin-top: -2rem;
 }
 
 @media screen and (max-width: 900px) {
