--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -1,7 +1,7 @@
 .home {
   display: flex;
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   margin-top: 10vh;
 
   @include tablet {
@@ -11,17 +11,20 @@
 
   &__content {
     width: 45%;
-    height: 80%;
+    height: 100%;
     display: flex;
     flex-direction: column;
+
     justify-content: center;
     padding: 0rem 4rem;
+    padding-top: 3rem;
+    position: relative;
     font-size: $body-text;
     color: $tertiary-color;
 
     @include tablet() {
       width: 90%;
-      padding: 0 2rem;
+      padding: 4rem 2rem;
       align-items: center;
     }
 
@@ -65,10 +68,20 @@
       }
     }
 
+    &__buttons {
+      display: flex;
+      flex-direction: column;
+
+      height: fit-content;
+    }
+
     &__button {
       background-color: $secondary-color;
-      width: fit-content;
-      padding: 1rem 2rem;
+      width: 312px;
+      height: 44px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       font-size: $normal-text;
       font-family: $primary-font;
       text-transform: uppercase;
@@ -76,11 +89,17 @@
       color: white;
       font-weight: 500;
       cursor: pointer;
-      border-radius: 10px;
-
+      margin: 1rem 0rem;
+      border-radius: 5px;
       a {
         text-decoration: none;
         color: white;
+        display: flex;
+        align-items: center;
+
+        span {
+          margin: 0 1rem;
+        }
       }
       @include tablet {
         font-size: $body-text;
@@ -94,6 +113,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top: -2rem;
 
     @include tablet() {
       position: absolute;
